# swap_errors

./: README.md  analysis.py  aux.py  auxiliary.py  behav_model  bhv_model-p.pkl  bhv_model-pr.pkl  bhv_model-r.pkl  bhv_model.pkl  circle_decoding.py  circus.py  color_curvature_script.py  cue_error_model.stan  cv_script_template.sh  data_test.py  decoder_pseudo_script.py  doughnuts.py  figures.conf  figures.py  figures_kernel.conf  figures_kernel.py  fit_distance_script.py  fit_lm_nullregion_script.py  fit_lm_script.py  fit_model_script.py  gmm.stan  helpers.py  hybrid_error_hierarchical_model.stan  hybrid_error_model.stan  hybrid_error_precue_model.stan  job_script_template.sh  linear_interp_color_model.stan  load_results.py  loading_test.py  make_data  make_data.py  make_server_figures_script.py  naive_centroids_script.py  naive_forgetting_script.py  naive_swapping_script.py  (+28 more)
behavioral_model/: corr_swap_guess.stan
swap_errors/: analysis.py  auxiliary.py  circus.py  color_curvature_script.py  cue_error_guess_model.stan  cue_error_hierarchical_model.stan  figures.conf  figures.py  figures_kernel.conf  figures_kernel.py  fit_lm_nullregion_script.py  fit_lm_script.py  fit_model.py  hand_rnn.py  hybrid_error_precue_model.stan  import_everything.py  inter_pfree_precue_model.stan  inter_tf_precue_model.stan  kernel_estimation.py  linear_interp_color_model.stan  make_pickle_script.py  make_pickle_scripy.py  make_server_figures_script.py  naive_centroids_script.py  naive_swapping_script.py  neural_similarity.py  null_hierarchical_model.stan  null_model.stan  null_t_precue_model.stan  resampling.py  ring_script.py  rnn_funcs.py  run_experiment.py  send_comparison.py  send_experiment.py  simplified_tcc_fitting.py  spatial_error_guess_model.stan  spatial_error_precue_model.stan  tcc.stan  tcc_model.py  (+9 more)
